--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
             "Tests\\": "tests/"
         }
     },
-    "require": {},
+    "require": {
+        "fyre/path": "^1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9"
     }
